# FarixEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: AssetConfig.h.in  FarixEngineConfig.cmake.in
docs/: components.md  events.md  prefabs.md  scenes.md  scripts.md  systems.md
examples/: main.cpp
examples/Simple 3D Ping-Pong/game/: game.hpp
examples/Simple 3D Ping-Pong/prefabs/: ball.json
examples/Simple 3D Ping-Pong/scenes/: pong.json
examples/Test/: Makefile
examples/Test/game/: game.cpp  game.hpp
examples/Test/scenes/: physics_test.json
examples/game/: game.cpp  game.hpp
examples/prefabs/: paddle.json
examples/scenes/: pong.json
examples/simple3DPingPong/game/: game.cpp  game.hpp
examples/simple3DPingPong/prefabs/: cube_with_child.json
examples/simple3DPingPong/scenes/: pong.json  test.json
examples/simplePingPong/: CMakeLists.txt  Makefile
examples/simplePingPong/.cache/clangd/index/: game.cpp.0BD9752BAA023370.idx  game.hpp.E6D0D29EF4EF760C.idx  main.cpp.49C882FE3960E392.idx
examples/simplePingPong/game/: game.cpp  game.hpp
examples/simplePingPong/prefabs/: ball.json  paddle.json
examples/simplePingPong/scenes/: physics_test.json  pong.json
farixEngine/assets/shaders/: default.frag  default.vert  text.frag  text.vert
farixEngine/include/farixEngine/: farixEngine.hpp
farixEngine/include/farixEngine/API/: gameObject.hpp  gameWorld.hpp
farixEngine/include/farixEngine/application/: application.hpp
farixEngine/include/farixEngine/assets/: assetManager.hpp  font.hpp  material.hpp  mesh.hpp  prefab.hpp  texture.hpp
farixEngine/include/farixEngine/components/: components.hpp
farixEngine/include/farixEngine/core/: engine.hpp  engineContext.hpp  engineRegistry.hpp  engineServices.hpp  world.hpp
farixEngine/include/farixEngine/ecs/: component.hpp  componentSerializerRegistry.hpp  system.hpp  systemRegistry.hpp
farixEngine/include/farixEngine/events/: event.hpp  (+2 more)
farixEngine/src/API/: gameObject.cpp  gameWorld.cpp
farixEngine/src/application/: application.cpp
farixEngine/src/assets/: mesh.cpp  prefab.cpp  texture.cpp
farixEngine/src/components/: components.cpp
farixEngine/src/core/: engine.cpp  engineRegistry.cpp  engineServices.cpp  world.cpp
farixEngine/src/ecs/: component.cpp  componentSerializerRegistry.cpp  system.cpp  systemRegistry.cpp
farixEngine/src/input/: inputManager.cpp
farixEngine/src/math/: mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
farixEngine/src/physics/: collisionHelpers.cpp
farixEngine/src/renderer/: renderer.cpp
farixEngine/src/scene/: scene.cpp  sceneManager.cpp
farixEngine/src/script/: script.cpp  scriptRegistry.cpp
farixEngine/src/serialization/: serializer.cpp
farixEngine/src/systems/: systems.cpp
farixEngine/src/utils/: keyToString.cpp  uuid.cpp
(+33 files in other folders)
